@@ -432,11 +432,10 @@ final class TransformWalker {
 
     /** Resolves a static {@code Vector3f} field to its {@code (x, y, z)} via the owner's {@code <clinit>}. */
     private float @Nullable [] resolveStaticVector(@NotNull String owner, @NotNull String fieldName) {
-        ClassNode cn = this.cache.load(owner);
-        MethodNode clinit = cn == null ? null : AsmKit.findMethod(cn, AsmKit.CLINIT);
+        MethodNode clinit = AsmKit.findClinit(this.cache, owner);
         if (clinit == null) return null;
         List<Float> pending = new ArrayList<>();
-        for (AbstractInsnNode in = clinit.instructions.getFirst(); in != null; in = in.getNext()) {
+        for (AbstractInsnNode in : clinit.instructions) {
             if (in.getOpcode() == Opcodes.NEW && in instanceof TypeInsnNode type && type.desc.equals(VECTOR3F)) {
                 pending.clear();
                 continue;
@@ -447,7 +446,7 @@ final class TransformWalker {
                 continue;
             }
             if (AsmKit.isPutStatic(in, owner, fieldName) && pending.size() >= 3)
-                return new float[]{pending.get(0), pending.get(1), pending.get(2)};
+                return new float[]{pending.getFirst(), pending.get(1), pending.get(2)};
         }
         return null;
     }
